--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <h1>Filter Fun</h1>
 <canvas id="canvas"></canvas>
 
-
-<h2>Load Image:</h2>
+<!--Adding image-->
+<h2>Load Image:</h2> 
 <input id="file" type="file" multiple="false" accept="image/*" onchange="loadImage()">
 
 
@@ -21,7 +21,7 @@
 	<input id="btnGrey" type="button" value="Greyscale " onclick="makeGrey()">
 </div>
 
-
+<!--Adding filters-->
 <h2 class="nomarginbottom">Reset Image Filter</h2>
 <input id="btnReset" type="button" value="Reset Image" onclick="resetImage()">
 
